[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://scripts/daily/shop.gd" id="1"]
[ext_resource type="PackedScene" path="res://scenes/ui/hud.tscn" id="2"]
[ext_resource type="Texture2D" path="res://assets/backgrounds/bg_shop.png" id="3"]

[node name="Shop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource("3")
expand_mode = 1
stretch_mode = 5

[node name="DarkOverlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.0, 0.0, 0.02, 0.5)

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
offset_left = 340.0
offset_top = 60.0
offset_right = 1240.0
offset_bottom = 700.0

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HeaderHBox" type="HBoxContainer" parent="Panel/VBox"]
layout_mode = 2

[node name="Title" type="Label" parent="Panel/VBox/HeaderHBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Dr.Hookah"

[node name="Spacer" type="Control" parent="Panel/VBox/HeaderHBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MoneyLabel" type="Label" parent="Panel/VBox/HeaderHBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = ""

[node name="Separator" type="HSeparator" parent="Panel/VBox"]
layout_mode = 2

[node name="InfoLabel" type="Label" parent="Panel/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = ""
autowrap_mode = 3

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="ItemContainer" type="VBoxContainer" parent="Panel/VBox/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 6

[node name="BackButton" type="Button" parent="Panel/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 38)
text = "マップへ戻る"

[node name="HUD" parent="." instance=ExtResource("2")]

[connection signal="pressed" from="Panel/VBox/BackButton" to="." method="_on_back_button_pressed"]
